[project]
name = "rats"
description = "bundled research analysis tools"
version = "0.10.1"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Elon Portugaly", email = "elonp@microsoft.com"},
    {name = "Javier Zazo", email = "javierzazo@microsoft.com"},
    {name = "Lorenzo Pisani", email = "lopisani@microsoft.com"},
]
keywords = ["pipelines", "machine learning", "research"]
license = "MIT"
dependencies = []

[project.optional-dependencies]
apps = [
    "rats-apps (==0.8.0)",
]
devtools = [
    "rats-devtools (==0.8.0)",
]

[project.urls]
repository = "https://github.com/microsoft/rats"
documentation = "https://microsoft.github.io/rats"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "rats", from = "src" },
]

[tool.poetry.group.local.dependencies]
# putting the local dependencies in a poetry group ensures pip never sees them
# and we can tell poetry to skip this group to test what our end users experience
rats-apps = { path = "../rats-apps", develop = true }
rats-devtools = { path = "../rats-devtools", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.rats-devtools]
enabled = true
