[project]
name = "rats"
description = "bundled research analysis tools"
version = "0.14.1"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Elon Portugaly", email = "elonp@microsoft.com"},
    {name = "Javier Zazo", email = "javierzazo@microsoft.com"},
    {name = "Lorenzo Pisani", email = "lopisani@microsoft.com"},
]
keywords = ["pipelines", "machine learning", "research"]
license = "MIT"
dependencies = []

[project.optional-dependencies]
apps = ["rats-apps (==0.14.1)"]
devtools = ["rats-devtools (==0.14.1)"]

[tool.uv.sources]
rats-apps = { path = "../rats-apps" }
rats-devtools = { path = "../rats-devtools" }

[project.urls]
repository = "https://github.com/microsoft/rats"
documentation = "https://microsoft.github.io/rats"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["rats"]

[tool.rats-devtools]
enabled = true
