[project]
name = "example-pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = []
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.rats-devtools]
enabled = true
